fix: removed scrollbar from textarea

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -67,7 +67,7 @@ body.dark {
   padding: 60px 50px 0 50px;
 }
 
-#content::-webkit-scrollbar {
+#text::-webkit-scrollbar {
   display: none;
 }
 
